# smartnotes-ai

./: .gitignore  CLAUDE.md  Makefile  PLANNING.md  PRD.md  README.md  TASKS.md  TECH-STACK.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_09_07_1835-297c97028012_initial_migration_create_users_.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: CLAUDE.md  __init__.py  enhancement.py  indexes.py  note.py  notebook.py  user.py
ios/smartnotes/smartnotes/: ContentView.swift  smartnotesApp.swift
ios/smartnotes/smartnotes.xcodeproj/: project.pbxproj
ios/smartnotes/smartnotes.xcodeproj/project.xcworkspace/xcuserdata/julianhein.xcuserdatad/: UserInterfaceState.xcuserstate
